update pom for deploy 2 OSS setting

--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
                     <plugin>
                         <groupId>org.sonatype.plugins</groupId>
                         <artifactId>nexus-staging-maven-plugin</artifactId>
-                        <version>1.6.8</version>
+                        <version>1.6.13</version>
                         <extensions>true</extensions>
                         <executions>
                             <execution>
@@ -142,6 +142,7 @@
                         <executions>
                             <execution>
                                 <phase>package</phase>
+                                <id>attach-javadocs</id>
                                 <goals>
                                     <goal>jar</goal>
                                 </goals>
